Fix table layout issue.

--- a/src/system/modules/!composer/assets/css/backend.css
+++ b/src/system/modules/!composer/assets/css/backend.css
@@ -169,7 +169,7 @@ span.stability-dev {
 /**
  * Listing view
  */
-table {
+table.composer_package_list {
 	table-layout: fixed;
 }
 .col_type {
